[ENH] comments in `MUSIC` configuration

--- a/ics_conaboy.conf
+++ b/ics_conaboy.conf
@@ -2,10 +2,10 @@
 boxlength		  = 400   # in Mpc/h
 zstart			  = 200   # redshift of the initial conditions
 levelmin		  = 8     # minimum level of refinement
-levelmin_TF       = 9    # minimum level of refinement for perturbation grid
+levelmin_TF       = 9     # minimum level of refinement for perturbation grid
 levelmax		  = 18    # maximum level of refinement
 padding			  = 32    # number of cells used for padding
-ref_center		  = 0.5, 0.5, 0.5
+ref_center		  = 0.5, 0.5, 0.5 # change this to the del_v maxima
 ref_extent		  = 0.0013575, 0.0013575, 0.0013575
 align_top		  = no
 baryons			  = yes
@@ -21,7 +21,7 @@ H0			    = 67.30
 sigma_8			= 0.812
 n_s			    = 0.965
 transfer		= camb_file
-transfer_file   = ../interpolate-field/transfer_camb_z200.txt
+transfer_file   = ./transfer_camb_z200.txt
 
 [random]
 seed[8]         = 12345
